@@ -178,7 +178,7 @@ UI_EN = {
     UI_trait_mundane = "Mundane",
     UI_trait_mundanedesc = "Your weapon attacks will never critically hit.<br>This includes any critical bonuses from traits such as Prowess.<br>Any other damage bonuses still apply properly.",
     UI_trait_burned = "Burn Ward Patient",
-    UI_trait_burneddesc = "Your past experience with fire affected your mental health. Your body recovered, but your soul didn't.<br>Observing fire gives you panic and anxiety, this effect scales based on the distance between you and the fire.<br>Prevents you from throwing fire bombs, molotov cocktails and starting campfires.",
+    UI_trait_burneddesc = "Your past experience with fire affected your mental health. Your body recovered, but your soul didn't.<br>Observing fire gives you panic and anxiety, this effect scales based on the distance between you and the fire.<br>Prevents you from throwing fire bombs, molotov cocktails and starting any kind of fire.",
 	UI_burnedcannotequip = "Your fear of fire prevents you from holding this item!",
 	UI_burnedstop = "Your fear of fire prevents you from setting fire!",
     UI_trait_deprived = "Deprived",
